--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/style.css" />
-        <link rel="stylesheet" href="/src/fontawesome-pro-5.0.13/css/all.css" />
+        <link rel="stylesheet" href="./style.css" />
+        <link
+            rel="stylesheet"
+            href="./src/fontawesome-pro-5.0.13/css/all.css"
+        />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -22,7 +25,7 @@
             <div class="profile normal-button">
                 <div class="avatar-frame pressed-button">
                     <img
-                        src="/src/img/ava.JPG"
+                        src="./src/img/ava.JPG"
                         alt=""
                         class="avatar-frame__img"
                     />
